# research-paper-scrape

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: trial.yaml
src/research_paper_scrape.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/scrape/: cli.py  config.py  dedupe.py  logging.py  models.py  normalize.py
src/scrape/exporters/: jsonl_writer.py  stats.py
src/scrape/parsers/: docx_parser.py  guess_sections.py  latex_parser.py  pdf_parser.py
src/scrape/sources/: base.py  chemrxiv.py  openreview.py
src/scrape/utils/: files.py  http.py  ocr.py  rate.py  robots.py
tests/: test_config.py  test_normalize.py  test_parsers.py  test_sources.py  test_sources_with_fixtures.py  test_utils.py
tests/fixtures/: chemrxiv_listing.html  openreview_discussions.json  openreview_search.json
